--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=3030
-CONNECTION_STRING='mongodb://127.0.0.1/food'
+CONNECTION_STRING='mongodb+srv://231212001:aeTcjBEr7tSjfsed@cluster0.pzc1pkf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 
 SECRET_KEY='mycode'
