--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "dev": "nodemon server.js"
   },
+    "engines": {
+  "node": "22.16.0"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
