--- a/frontend/food_app/package.json
+++ b/frontend/food_app/package.json
@@ -6,18 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist"  
   },
   "engines": {
-  "node": "22.16.0"
-},
+    "node": "22.16.0"
+  },
   "dependencies": {
     "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "serve": "^14.2.0" 
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
