--- a/frontend/food_app/package.json
+++ b/frontend/food_app/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "serve -s dist"  
+    "start": "serve -s dist"
   },
   "engines": {
     "node": "22.16.0"
@@ -18,21 +18,17 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
-    "serve": "^14.2.0" 
+    "serve": "^14.2.0",
+    "vite": "^7.0.0",
+    "@vitejs/plugin-react": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.2.0",
-    
-    "axios": "...",
-  "vite": "^7.0.0",
-  "@vitejs/plugin-react": "^4.5.2"
+    "globals": "^16.2.0"
   }
- 
 }
